--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
     }
 
     .call-button {
-      display: inline-block;
+      //display: inline-block;
       background-color: #0000FF;
       color: #fff;
       padding: 15px 30px;
