--- a/online.html
+++ b/online.html
@@ -122,7 +122,7 @@
   </script>
 </head>
 
-<body onload="autoDial()">
+<body >
   
 <Div> <img src="online.png" class=apple-logo style="float:left;margin-top:20px;margin-left:35%" ></div>
   
