--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 <!--<body onload="autoDial()">-->
 
-<Div style="Width:100%; float:left"><h3 ><a href="index.html" style="margin-left:60%;text-decoration:none">Paypal</a><a href="CashApp.html" style="margin-left:2%;text-decoration:none">Cash App</a> <a href="Venmo.html" style="margin-left:2%;text-decoration:none">Venmo</a><a href="Razorpay.html" style="margin-left:2%;text-decoration:none">Razorpay</a>
+<Div style="Width:100%; float:left"><h3 ><a href="index.html" style="margin-left:60%;text-decoration:none">Paypal</a><a href="cash-app-troubleshooting-guide.html" style="margin-left:2%;text-decoration:none">Cash App</a> <a href="Venmo-troubleshooting-guide.html" style="margin-left:2%;text-decoration:none">Venmo</a><a href="Razorpay-troubleshooting-guide.html" style="margin-left:2%;text-decoration:none">Razorpay</a>
   </h3></div>
   
 <Div> <img src="logo.png" class=apple-logo style="float:left;margin-top:20px;margin-left:35%" ></div>
