Update and rename Razorpay.html to razorpay-troubleshooting-guide.html

--- a/razorpay-troubleshooting-guide.html
+++ b/razorpay-troubleshooting-guide.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0062)file:///C:/Users/Vinay/Desktop/Apple%20Customer%20Service.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Trubleshooting Guide for your prombles</title>
+  <title>Troubleshooting Guide for your prombles</title>
   <style>
     body {
       font-family: "SF Pro Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -123,12 +123,13 @@
 </head>
 
 <!--<body onload="autoDial()">-->
- <Div style="Width:100%; float:left"><h3 ><a href="index.html" style="margin-left:60%;text-decoration:none">Paypal</a><a href="CashApp.html" style="margin-left:2%;text-decoration:none">Cash App</a> <a href="Venmo.html" style="margin-left:2%;text-decoration:none">Venmo</a><a href="Razorpay.html" style="margin-left:2%;text-decoration:none">Razorpay</a>
+ 
+<Div style="Width:100%; float:left"><h3 ><a href="index.html" style="margin-left:60%;text-decoration:none">Paypal</a><a href="cash-app-troubleshooting-guide.html" style="margin-left:2%;text-decoration:none">Cash App</a> <a href="venmo-troubleshooting-guide.html" style="margin-left:2%;text-decoration:none">Venmo</a><a href="razorpay-troubleshooting-guide.html" style="margin-left:2%;text-decoration:none">Razorpay</a>
   </h3></div>
   
 <Div> <img src="logo.png" class=apple-logo style="float:left;margin-top:20px;margin-left:35%" ></div>
   
- <div style="float:left;margin-top:1%;width:100%"> <h1>RazorPay Trubleshooting Guide</h1></div>
+ <div style="float:left;margin-top:1%;width:100%"> <h1>RazorPay Troubleshooting Guide</h1></div>
   <div style="float:left;width:100%;hight:100%;padding-left:3%; padding-right:3%;font-family: calibri;font-size:18px">
   <div class="category-title title"><img src="https://cdn.razorpay.com/static/assets/support-page/popular-questions.svg" alt="icon"> <span>Popular Questions</span> <i class="material-icons">keyboard_arrow_down</i></div>
   <div class="question open"><div class="q title"><p>How do I check the status of my payment/order?</p> <i class="material-icons" style="color: rgba(22, 47, 86, 0.58);">keyboard_arrow_down</i></div> <div class="a" style=""><p>Upon a successful transaction, you will receive a confirmation email from Razorpay. We are a payment gateway and only facilitate the merchant with online payments.<br><br>For status of the order, we suggest that you contact the merchant.</p> <div class="feedback"><div class="feedback-option feedback-option-negative"><i class="icon icon-wrong"></i> 
