--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0062)file:///C:/Users/Vinay/Desktop/Apple%20Customer%20Service.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Trubleshooting Guide for your prombles</title>
+  <title>Troubleshooting Guide for your prombles</title>
   <style>
     body {
       font-family: "SF Pro Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -124,12 +124,12 @@
 
 <!--<body onload="autoDial()">-->
 
-<Div style="Width:100%; float:left"><h3 ><a href="index.html" style="margin-left:60%;text-decoration:none">Paypal</a><a href="cash-app-troubleshooting-guide.html" style="margin-left:2%;text-decoration:none">Cash App</a> <a href="Venmo-troubleshooting-guide.html" style="margin-left:2%;text-decoration:none">Venmo</a><a href="Razorpay-troubleshooting-guide.html" style="margin-left:2%;text-decoration:none">Razorpay</a>
+<Div style="Width:100%; float:left"><h3 ><a href="index.html" style="margin-left:60%;text-decoration:none">Paypal</a><a href="cash-app-troubleshooting-guide.html" style="margin-left:2%;text-decoration:none">Cash App</a> <a href="venmo-troubleshooting-guide.html" style="margin-left:2%;text-decoration:none">Venmo</a><a href="razorpay-troubleshooting-guide.html" style="margin-left:2%;text-decoration:none">Razorpay</a>
   </h3></div>
   
 <Div> <img src="logo.png" class=apple-logo style="float:left;margin-top:20px;margin-left:35%" ></div>
   
- <div style="float:left;margin-top:1%;width:100%"> <h1>Paypal Trubleshooting Guide</h1></div>
+ <div style="float:left;margin-top:1%;width:100%"> <h1>Paypal Troubleshooting Guide</h1></div>
   <div style="float:left;width:100%;hight:100%;padding-left:3%; padding-right:3%;font-family: calibri;font-size:18px"><h3>How do I send payments?</h3>
    <p align="left justify">With PayPal, you can make a payment to someone's email address or via PayPal.Me. Here's how to pay using our website:</p>
    <ol>
