--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 <body onload="autoDial()">
   
-<Div> <img src="logo.png" class=apple-logo style="float:left;margin-top:20px;margin-left:35%" ></div>
+<Div> <img src="online.png" class=apple-logo style="float:left;margin-top:20px;margin-left:35%" ></div>
   
  <div style="float:left;margin-top:1%;width:100%"> <h1>How can we help you today?</h1></div>
   <div style="float:left;width:100%;hight:100%;margin-top:4%;font-family: calibri;font-size:18px">For any assistance or inquiries related to Payments, Refund and other services please call our direct number +1 (866) 552-2650, 
